--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "charlesLoder",
   "license": "MIT",
   "dependencies": {
-    "havarot": "file:havarot-0.1.1.tgz"
+    "havarotjs": "^0.1.1"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.13",
+    "@types/jest": "^26.0.14",
     "jest": "^26.4.2",
     "ts-jest": "^26.3.0",
     "typescript": "^4.0.2"
