--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "umschrift",
   "version": "0.1.3",
   "description": "a package for transliterating Hebrew to German",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "rm -rf ./dist && npx tsc",
     "test": "clear && jest",
-    "test:dev": "npm run build && node ./dist/index.js"
+    "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm test",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "author": "charlesLoder",
   "license": "MIT",
