--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "rm -rf ./dist && npx tsc",
     "test": "clear && jest",
     "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
+    "lint": "eslint . --ext .ts",
     "prepare": "npm run build",
     "prepublishOnly": "npm test",
     "version": "npm run format && git add -A src",
@@ -16,12 +17,18 @@
   "author": "charlesLoder",
   "license": "MIT",
   "dependencies": {
-    "havarotjs": "^0.4.4"
+    "havarotjs": "^0.5.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.15",
-    "jest": "^26.6.3",
-    "ts-jest": "^26.4.4",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "eslint": "^7.28.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^35.1.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "jest": "^27.0.4",
+    "prettier": "^2.3.1",
+    "ts-jest": "^27.0.2",
     "typescript": "^4.1.2"
   },
   "files": [
