--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "format": "prettier --write 'src/**/*.ts' 'test/**/*.ts'",
     "lint": "eslint . --ext .ts",
     "prepare": "npm run build",
-    "prepublishOnly": "npm test",
-    "version": "npm run format && git add -A src",
+    "prepublishOnly": "npm test && npm run lint",
+    "preversion": "npm run format && npm run lint && npm test",
     "postversion": "git push && git push --tags"
   },
   "author": "charlesLoder",
